smt/src/solvers/snapshots/svirpti_smt__solvers__z3_smt2__tests__check_z3_installation.snap
---
source: smt/src/solvers/z3_smt2.rs
expression: "(model, labels)"
---
- items:
    - name: x
      args: []
      sort: Int
      value:
        Int: 2
- []
