smt/src/solvers/snapshots/svirpti_smt__solvers__z3_smt2__tests__check_z3_labels-2.snap
---
source: smt/src/solvers/z3_smt2.rs
expression: "(model, labels)"
---
- items:
    - name: k
      args: []
      sort: Int
      value:
        Int: 0
    - name: ArrayAccess2
      args: []
      sort: Bool
      value:
        Bool: false
- - ArrayAccess2
